--- a/config/config.yaml
+++ b/config/config.yaml
@@ -51,10 +51,10 @@ tasks_info:
   '15 11 * * *'   : '1'
   '20 11 * * *'   : 'email'
 
-  '44 12 * * *'   : 'a'
-  '45 12 * * *'   : '30'
-  '20 13 * * *'   : '15'
-  '55 13 * * *'   : '5'
+  '18 13 * * *'   : 'execute_CGS_exe'
+  '19 13 * * *'   : 'a'
+  '20 13 * * *'   : '30'
+  '55 13 * * *'   : '15'
   '30 14 * * *'   : 'email'
 
   '35 14 * * *'   : 'gang'
@@ -153,12 +153,12 @@ statistics_info:
 test_info:
   shot_num:
     a: 4709
-    gang: 20
+    gang: 715
   mail_to : "1847269030@qq.com"
   tasks:
     [
-      'a',
-      '5',
+      'gang',
+      'weekly',
 #      '60',
 #      '30',
 #      '15',
